--- a/src/Login.css
+++ b/src/Login.css
@@ -1,24 +1,25 @@
-.login{
-  background-repeat: no-repeat;
-  background-size:cover;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height:100vh;
-    margin: auto;
-    width: 50%;
-}
-.email{
-  background-color: rgba(0,0,0,0.1);
-  width:30%;
-  margin:5px;
-  color:#fff;
+.loginBack {
+  height: 100vh;
+  width: 100%;
+  display: flex;
 
+  flex-direction: column;
+
+  margin: auto;
 }
-.password{
-  background-color: rgba(0,0,0,0.1);
-  width:30%;
-  margin: 5px;
-  color:#fff;
+.login {
+  background-repeat: no-repeat;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 10%;
+  color: aliceblue;
+  border-radius: 30px;
+  flex-direction: column;
+  margin: auto;
+  background-color: teal;
+  width: 20%;
+}
+.login:hover {
+  box-shadow: 1px 1px 1px 1px rgb(32, 33, 33);
 }
