--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,52 @@
-
- .header{
-   width:100%;
-   height: 35px;
-   display: flex;
-   background-color: #e1dfe5;
- }
-
- .content{
-   background-color: #ebebeb;
-   width:100%;
-   height:100%;
- }
- .graph{
-   border-radius: 15px;
-   width:70%;
-   display: flex;
-   margin: auto;
-   background-color: #fff;
- }
-.Doughnut{
-  border-radius: 15px;
-
+.header {
+  width: 100%;
+  height: 35px;
+  display: flex;
+  background-color: #e1dfe5;
 }
-.table{
-  width:30%;
+
+.content {
+  background-color: #ebebeb;
+  width: 100%;
+  height: 100%;
+}
+.graph {
+  border-radius: 15px;
+  width: 70%;
+  display: flex;
+  margin: auto;
+  background-color: #fff;
+}
+.Doughnut {
+  border-radius: 15px;
+}
+.table {
+  width: 30%;
   padding: 1%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
 }
- .head2{
-   border-radius: 15px;
-   display: flex;
-   justify-content: space-around;
-   flex-direction: row;
-   width:95%;
-   flex-wrap: wrap;
-   padding:1%;
-
- }
-.content1{
+.head2 {
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 95%;
+  flex-wrap: wrap;
+  padding: 1%;
+}
+.content1 {
   border-radius: 15px;
   background-color: #fff;
   width: 15%;
   height: 19%;
   align-self: center;
 }
-
-.body{
+.deviceName {
+  height: 80%;
+}
+.body {
   border-radius: 15px;
   display: flex;
   width: 100%;
@@ -56,69 +54,64 @@
   flex-direction: row;
   padding: 1%;
 }
-.selector{
+.selector {
   border-radius: 15px;
- display: flex;
- flex-direction: column;
- justify-content: space-around;
- background-color: #fff;
- height: 33%;
- margin: 2%;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #fff;
+  height: 33%;
+  margin: 2%;
 }
 
-.footer{
-  width:100%;
+.footer {
+  width: 100%;
   height: 50px;
   background-color: #ebebeb;
 }
 
-
-@media only screen and (max-width:720px){
-  .header{
-    width:100%;
+@media only screen and (max-width: 720px) {
+  .header {
+    width: 100%;
     height: 35px;
     background-color: #e1dfe5;
   }
 
-  .content{
+  .content {
     background-color: #ebebeb;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
   }
-  .graph{
+  .graph {
     border-radius: 15px;
-    width:50%;
-    height:50;
+    width: 50%;
+    height: 50;
     background-color: black;
     transform: rotate(90deg);
   }
 
+  .content1 {
+    border-radius: 15px;
+    background-color: #fff;
+    width: 100%;
+  }
+  .body {
+    border-radius: 15px;
+    display: flex;
+    width: 100%;
+    height: inherit;
+    flex-direction: row;
+  }
+  .selector {
+    border-radius: 15px;
+    height: 100%;
+    background-color: #fff;
+    padding: 1%;
+  }
 
- .content1{
-   border-radius: 15px;
-   background-color: #fff;
-   width:100%;
- }
- .body{
-   border-radius: 15px;
-   display: flex;
-   width: 100%;
-   height: inherit;
-   flex-direction: row;
- }
- .selector{
-   border-radius: 15px;
-  height: 100%;
-  background-color: #fff;
-  padding: 1%;
- }
-
- .footer{
-   width:100%;
-   height: 50px;
-   background-color: #ebebeb;
- }
-
-
+  .footer {
+    width: 100%;
+    height: 50px;
+    background-color: #ebebeb;
+  }
 }
