--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .graph {
   border-radius: 15px;
   width: 70%;
+  height: 70vh;
   display: flex;
   margin: auto;
   background-color: #fff;
@@ -81,13 +82,18 @@
     background-color: #ebebeb;
     width: 100%;
     height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
   }
   .graph {
     border-radius: 15px;
-    width: 50%;
-    height: 50;
+    width: 100vw;
+    height: 50vh;
     background-color: black;
-    transform: rotate(90deg);
+  }
+  .head2 {
+    width: 100%;
   }
 
   .content1 {
@@ -99,12 +105,12 @@
     border-radius: 15px;
     display: flex;
     width: 100%;
-    height: inherit;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: base;
   }
   .selector {
     border-radius: 15px;
-    height: 100%;
+    width: 90%;
     background-color: #fff;
     padding: 1%;
   }
@@ -113,5 +119,12 @@
     width: 100%;
     height: 50px;
     background-color: #ebebeb;
+  }
+  .table {
+    width: 100%;
+    padding: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
 }
