--- a/src/App.css
+++ b/src/App.css
@@ -10,65 +10,72 @@
   width: 100%;
   height: 100%;
 }
+
 .graph {
-  border-radius: 15px;
-  width: 70%;
+  width: 50%;
   height: 70vh;
   display: flex;
   margin: auto;
   background-color: #fff;
 }
-.Doughnut {
-  border-radius: 15px;
-}
-.table {
-  width: 30%;
-  padding: 1%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
+
 .head2 {
-  border-radius: 15px;
   display: flex;
   justify-content: space-around;
-  flex-direction: row;
   width: 95%;
   flex-wrap: wrap;
   padding: 1%;
 }
 .content1 {
-  border-radius: 15px;
   background-color: #fff;
-  width: 15%;
-  height: 19%;
-  align-self: center;
+  padding: 1%;
 }
-.deviceName {
-  height: 80%;
-}
+
 .body {
-  border-radius: 15px;
   display: flex;
   width: 100%;
-  justify-content: space-around;
   flex-direction: row;
   padding: 1%;
 }
-.selector {
-  border-radius: 15px;
+.barStyle {
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  background-color: #fff;
-  height: 33%;
-  margin: 2%;
+  flex-direction: row;
+  width: 99%;
+  margin: auto;
+  font-size: 10px;
 }
-
-.footer {
-  width: 100%;
-  height: 50px;
-  background-color: #ebebeb;
+.goodSpan {
+  background-color: rgba(10, 167, 69, 0.2);
+  border: 2px solid;
+  border-color: rgba(10, 167, 69, 1);
+  border-width: 1;
+  width: 33%;
+}
+.goodSpan:hover {
+  background-color: rgba(10, 167, 69, 0.4);
+  border-color: rgba(10, 167, 69, 1);
+}
+.avgSpan {
+  background-color: rgba(255, 193, 7, 0.2);
+  border: 2px solid;
+  border-color: rgba(255, 193, 7, 1);
+  border-width: 1;
+  width: 33%;
+}
+.avgSpan:hover {
+  background-color: rgba(255, 193, 7, 0.4);
+  border-color: rgba(255, 193, 7, 1);
+}
+.badSpan {
+  width: 33%;
+  background-color: rgba(205, 92, 92, 0.2);
+  border: 2px solid;
+  border-color: rgba(205, 92, 92, 0.2);
+  border-width: 1;
+}
+.badSpan:hover {
+  background-color: rgba(255, 99, 132, 0.4);
+  border-color: rgba(255, 99, 132, 1);
 }
 
 @media only screen and (max-width: 720px) {
