--- a/src/DeviceTable.css
+++ b/src/DeviceTable.css
@@ -1,9 +1,36 @@
 .table {
   padding: 10px;
-
-  background-color: aliceblue;
+  width: 100%;
+  height: 60vh;
+  overflow: auto;
+  font-size: 10px;
 }
+
 .table input {
-  border: 1.4px solid black;
+  border: 1px solid black;
+  margin: auto;
+  display: flex;
   border-radius: 3px 3px 0px 0px;
+  padding: 0px;
+  width: 90%;
+}
+
+.deviceName {
+  padding: none;
+  font-size: 8px;
+}
+.footfall {
+  padding: none;
+  font-size: 8px;
+}
+.userdeilght {
+  padding: none;
+  font-size: 8px;
+}
+.deviceName tr td {
+  padding: 0px;
+}
+.ant-table-column-sorter {
+  width: 10px;
+  height: 10px;
 }
