--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,17 @@
 }
 
 .content {
-  background-color: #ebebeb;
+  background-color: #8cdadd;
   width: 100%;
   height: 100%;
   display: flex;
+  padding: 8px;
+}
+.other-content{
+  width:70%;
+  display: flex;
+  padding:3px;
   flex-direction: column;
-  justify-content: space-around;
 }
 .body-graph-main {
   display: flex;
@@ -23,17 +28,27 @@
   border-radius: 20px;
 }
 .graph {
-  height: 60vh;
-  width: 70%;
+  height: 70vh;
+  width: 90%;
   margin: auto;
   background-color: #fff;
 }
 
 .date-table {
+  margin:auto;
   width: 30%;
-  display: flex;
-  flex-direction: column;
+  height:auto;
+  padding:10px;
+  margin-top:4px;
+  background-color: #fff;
+  border-radius: 20px;
+  
 }
+.datepicker{
+  margin: auto;
+  width: 80%;
+}
+
 .head2 {
   display: flex;
   justify-content: space-around;
@@ -44,7 +59,7 @@
 .content1 {
   background-color: #fff;
   padding: 1%;
-  min-width: 7%;
+  min-width: 11%;
   border-radius: 14px;
 }
 .content hr {
