--- a/src/Login.css
+++ b/src/Login.css
@@ -1,25 +1,21 @@
-.loginBack {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-
-  flex-direction: column;
-
-  margin: auto;
-}
-.login {
-  background-repeat: no-repeat;
-  justify-content: center;
+.login-main {
+  justify-content: flex-end;
   align-items: center;
+  flex-direction: column;
   display: flex;
-  height: 10%;
+  height: 100vh;
   color: aliceblue;
   border-radius: 30px;
-  flex-direction: column;
   margin: auto;
   background-color: teal;
-  width: 20%;
+  width: 40%;
+  padding: 3%;
 }
-.login:hover {
-  box-shadow: 1px 1px 1px 1px rgb(32, 33, 33);
+.login-second {
+  width: 60%;
+  height: 40%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
