--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,9 @@
   background-color: rgba(255, 99, 132, 0.4);
   border-color: rgba(255, 99, 132, 1);
 }
+.footer {
+  justify-content: center;
+  margin: auto;
+  background-color: #8cdadd;
+  width: 100%;
+}
