--- a/src/Login.css
+++ b/src/Login.css
@@ -28,3 +28,10 @@
   width: 60%;
   height: 40%;
 }
+.user-initials {
+  font-size: 10px;
+  align-self: flex-start;
+  border: 1px solid #000;
+  padding: 2px;
+  border-radius: 10px;
+}
