--- a/src/Login.css
+++ b/src/Login.css
@@ -7,7 +7,7 @@
   color: aliceblue;
   border-radius: 20px;
   margin: auto;
-  background-color: teal;
+  background-color: #42c3a5;
   width: 40%;
   padding: 3%;
   min-width: 360px;
