--- a/src/Components/Report/Report.css
+++ b/src/Components/Report/Report.css
@@ -1,11 +1,9 @@
 .table1{
   width:100%;
-  height:300px;
   margin: auto;
 }
-.table table, th, td {
+.table1 th,td {
     border: 1px solid black;
-}
-.table th, td {
     padding: 15px;
+
 }
