--- a/src/Components/Graph/Graph.css
+++ b/src/Components/Graph/Graph.css
@@ -2,4 +2,7 @@
    height:70vh;
    border-radius: 20px;
     background-color: #fff;
+    display: flex;
+    align-items: center ;
+    justify-content: center;
 }
