--- a/src/Components/Graph/Graph.css
+++ b/src/Components/Graph/Graph.css
@@ -1,8 +1,9 @@
 .graph{
-   height:70vh;
    border-radius: 20px;
     background-color: #fff;
     display: flex;
     align-items: center ;
+    height: 100%;
+    min-height: 70vh;
     justify-content: center;
 }
