--- a/src/Components/Table/DeviceTable.css
+++ b/src/Components/Table/DeviceTable.css
@@ -1,10 +1,12 @@
 .table {
-  padding: 10px;
   width: 100%;
   overflow: auto;
   font-size: 14px;
   background-color: #fff;
   border-radius: 20px;
+  overflow: hidden;
+  padding: 1%;
+  min-height: 60vh;
 }
 
 .table input {
