--- a/src/Components/Graph/Graph.css
+++ b/src/Components/Graph/Graph.css
@@ -6,4 +6,58 @@
     height: 100%;
     min-height: 70vh;
     justify-content: center;
+    padding: 10px;
 }
+.inside-conditional-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+.date-picker-selector {
+    display: flex;
+    justify-content: space-between;
+    
+}
+.smileys {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    justify-content: space-around;
+  }
+  
+  .goodSmiley {
+    background-color: #00b55c;
+    border-radius: 30px;
+    transition: width 1s;
+    width: 10%;
+    font-size: 18px;
+    color: #fff;
+    font-weight: bold;
+}
+  
+  .smiley-pic {
+    position: relative;
+    z-index: 3;
+    right: 10px;
+  }
+  .avgSmiley {
+    background-color: #ecf200;
+    border-radius: 30px;
+    transition: width 1s;
+    width: 10%;
+    font-size: 18px;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .badSmiley {
+    background-color: #fe001e;
+    border-radius: 30px;
+    transition: width 1s;
+    width: 10%;
+    font-size: 18px;
+    color: #fff;
+    font-weight: bold;
+  }
+  
